11 June 2008
+ Can now set thumbnail dimensions from settings
+ All thumbnail setting are derived from settings page
+ Viewing images in a folder can now be viewed using jcarousel lite.
+ Added settings to control jcarousel lite
+ Updated: javascript/jcaro_lite/*
           javascript/shutter/*
           templates/carousel_horz.tpl,
           templates/carousel_vert.tpl, templates/settings.tpl,
           templates/style.css

Version 2.1.0
---------------------------------------------------------------------------------
5 June 2008
+ Added fourth parameter to importPost : file_prefix. Prefixes the
  saved file with submitted characters.

3 June 2008
+ Added conditional to prevent similiar resize from overwriting one
  another.
+ Added new menu to pick resize method on image.
+ File_Assoc class now tracks width, height, and cropped status.
+ Updated: javascript/pick_file/head.js,
           javascript/pick_file/scripts.js,
           templates/style.css,
           templates/file_manager/folder_content_view.tpl,
           templates/file_manager/resize.tpl

30 May 2008
+ Error check added to resize function.
+ Rewrote image resizing to avoid square images.

23 May 2008
+ Filecabinet will now resize media as well as images.
+ Added type to javascript scripts
+ Updated: javascript/pick_file/head.js,
           javascript/pick_file/scripts.js
           javascript/update_file/head.js


21 May 2008
+ When checking the mime type, the extension is forced into lowercase.

29 April 2008
+ Hiding some elements if the user doesn't have file rights.
+ Updated: templates/file_manager/placeholder.tpl

25 April 2008
+ Fixed typo in Image:makeThumbnail
+ Added ability to move files to other folders.
+ Updated: templates/document_edit.tpl, templates/image_edit.tpl,
  templates/multimedia_edit.tpl 

24 April 2008
+ Revamped embedded code
+ Added flicker slide shows.
+ Fixed module restrictions on folders (I think)
+ Updated: templates/edit_folder.tpl, templates/embed_edit.tpl